# headroom_inspired_agentic_compression_framework

./: ANSWER_TO_USER_QUESTION.txt  Cargo.toml  FINAL_TEST_REPORT.md  MEASUREMENT_RESULTS.md  QUICK_VERIFICATION.sh  README.md  REPO_RENAME_GUIDE.md  VERIFICATION_SUMMARY.txt
.github/: REPOSITORY_INFO.md
.github/workflows/: release.yml
crates/compression-mcp/: Cargo.toml
crates/compression-mcp/src/: ccr.rs  exporter.rs  hook_client.rs  integrated.rs  lib.rs  main.rs  main_integrated.rs  metrics.rs  router.rs  safety.rs  signal_maps.rs
crates/compression-mcp/src/compressors/: code_compressor.rs  kompress_base.rs  mod.rs  smart_crusher.rs
crates/mcp-types/: Cargo.toml
crates/mcp-types/src/: lib.rs
docs/: ARCHITECTURE.md  index.md
scripts/: install.ps1
