[workspace]
members = [
    "crates/compression-mcp",
    "crates/mcp-types",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sai Tarrun Pitta <saitarrunpitta@gmail.com>"]
license = "MIT"
repository = "https://github.com/saitarrun/headroom_inspired_agentic_compression_framework"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
