[package]
name = "compression-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "compression-mcp"
path = "src/main.rs"

[dependencies]
mcp-types = { path = "../mcp-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
